--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "softbarberp",
+  "name": "softbarberpro",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
@@ -17,7 +17,7 @@
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
-    "axios": "^1.7.2",
+    "axios": "^1.7.7",
     "expo": "~51.0.24",
     "expo-font": "~12.0.9",
     "expo-status-bar": "~1.12.1",
@@ -32,7 +32,8 @@
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-toast-message": "^2.2.0",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "softbarberpro": "file:"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
