--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native": "^0.74.3",
     "react-native-calendars": "^1.1307.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.12.3",
     "react-native-picker-select": "^9.1.3",
